--- a/index.html
+++ b/index.html
@@ -25,4 +25,5 @@
         		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
+		<img scr="http://weknowyourdreams.com/images/minions/minions-05.jpg" alt="minions"/>
 	</body>
