--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
         		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
-		<img src="http://weknowyourdreams.com/images/minions/minions-05.jpg"/>
+		<a href="http://weknowyourdreams.com/images/minions/minions-05.jpg" target="-blank" >
+			<img src="http://weknowyourdreams.com/images/minions/minions-05.jpg" alt="minions"/> </a>
 	</body>
