--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 			</ul>
 		</footer>
 		
-			 <img src="http://weknowyourdreams.com/images/minions/minions-05.jpg" alt="minions"/></a>
+			 <img src="http://weknowyourdreams.com/images/minions/minions-05.jpg" alt="minions"/>
+		<a href="http://weknowyourdreams.com/images/minions/minions-05.jpg" target="-blank" ></a>
 	</body>
