--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Ellin!</h1>
-				<p>I'm student from <em>San Leandro High School    </em>  <a href="/about">Read more about my life...</a></p>
+				<p>I'm a student from <em>San Leandro High School    </em>  <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
