--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>ELLIN </title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">	
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Ellin!</h1>
-				<p>I'm a student from <em>San Leandro High School    </em>  <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-		
-			 <img src="http://weknowyourdreams.com/images/minions/minions-05.jpg" alt="minions"/>
-		<a href="http://weknowyourdreams.com/images/minions/minions-05.jpg" target="-blank" ></a>
-	</body>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
