--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/EllinYu">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/EllinYu">github.com/EllinYu</a></li>
 			</ul>
 		</footer>
 		
