--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="mailto:ellinyu1015@gmail.com">email</a></li>
         		<li><a href="https://github.com/EllinYu">github.com/EllinYu</a></li>
 			</ul>
 		</footer>
