--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 			</ul>
 		</footer>
 		
-			 <img src="http://weknowyourdreams.com/images/minions/minions-05.jpg" alt="minions"/>
-		<a href="http://weknowyourdreams.com/images/minions/minions-05.jpg" target="-blank" ></a>
+			 <img src="http://orig01.deviantart.net/76be/f/2013/241/2/5/minion_by_bibi97nd-d6k9zyj.png" alt="minions"/>
+		<a href="http://orig01.deviantart.net/76be/f/2013/241/2/5/minion_by_bibi97nd-d6k9zyj.png" target="-blank" ></a>
 	</body>
