--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<title>ELLIN </title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">	
 	</head>
-	<body>
+	<body>  
 		<nav>
+	        <img scr="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif"/>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
