--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<title>ELLIN </title>
+		<link href="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif"/>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">	
 	</head>
 	<body>  
 		<nav>
-	        <img scr="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif"/>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
