--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 		</footer>
 		
 			 <img src="http://orig01.deviantart.net/76be/f/2013/241/2/5/minion_by_bibi97nd-d6k9zyj.png" alt="minions"/>
-		 <img scr="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/>
+		 <img src="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/>
 		
 </body>
