--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Ellin!</h1>
+        		<h1>   <img src="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/>Hi there, I'm Ellin!</h1>
 				<p>I'm a student from <em>San Leandro High School    </em>  <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
