--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<nav>
 			<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+	        	<li><a href="/life">Life</a></li>
+        		<li><a href="/photo">Photo</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
