--- a/Photo/index.html
+++ b/Photo/index.html
@@ -4,7 +4,7 @@ title: Scenic Photos
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
-
+			<h1> <img src="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/>{{ page.title }} <img src="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/></h1>
 	  {% for post in site.posts %}
 	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
