--- a/index.html
+++ b/index.html
@@ -29,5 +29,45 @@
 		
 			 <img src="http://orig01.deviantart.net/76be/f/2013/241/2/5/minion_by_bibi97nd-d6k9zyj.png" alt="minions"/>
 		
-		
+		 <div class="search">Search the table</div>
+  
+  <table>
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>What to eat</th>
+        <th>Fruit</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Monday</td>
+        <td>Pizza</td>
+        <td>Apple</td>
+      </tr>
+      <tr>
+        <td>Tuesday</td>
+        <td>Chicken</td>
+        <td>Orange</td>
+      </tr>
+      <tr>
+        <td>Wensday</td>
+        <td>Spaghetti</td>
+        <td>Grapes</td>
+      </tr>
+      <tr>
+        <td>Tursday</td>
+        <td>Burgers</td>
+        <td>Apple</td>
+      </tr>
+      <tr>
+        <td>Friday</td>
+        <td>Rice</td>
+        <td>Strawberry</td>
+      </tr>
+     
+    </tbody>
+  
+  </table>
+
 </body>
