--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<nav>
 			<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/school">school</a></li>
+	        	<li><a href="/school">School</a></li>
         		<li><a href="/photo">Photo</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
