--- a/school/index.html
+++ b/school/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Scenic Photos
+title: School Life
 ---
 	<h1> <img src="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/>{{ page.title }} <img src="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/></h1>
 	<ul class="posts">
@@ -11,8 +11,8 @@ title: Scenic Photos
 	</ul>
         
        <div class="photos">
-    <h3 class="blue">HongKong</h3>
+    <h3 class="blue">Blance</h3>
     <div class="photos">
-      <img src="http://www.airasia.com/cdn/aa-images/en-MY/hongkong-headline-skyline_7.jpg?sfvrsn=2">
+      <img src="https://drive.google.com/file/d/0BzLGxrW7TgCueEtDNEh6ZlJUeWc/view?usp=sharing">
       
     </div>
