--- a/school/index.html
+++ b/school/index.html
@@ -13,6 +13,6 @@ title: School Life
        <div class="photos">
     <h3 class="blue">Blance</h3>
     <div class="photos">
-      <img src="https://drive.google.com/file/d/0BzLGxrW7TgCueEtDNEh6ZlJUeWc/view?usp=sharing">
+      <img src="https://lh4.googleusercontent.com/nP70v24Uz0eMHa5X06vVu0V3Fowz2TbaXY--GwRmdvrnW5lunpmcoKdF4RzF3xLk0CxJfh1dAlZp1pY=w1366-h649-rw">
       
     </div>
