--- a/Photo/index.html
+++ b/Photo/index.html
@@ -11,8 +11,8 @@ title: Scenic Photos
 	</ul>
         
        <div class="photos">
-    <h3 class="blue">HongKong</h3>
+    <h3 class="blue">Balance</h3>
     <div class="photos">
-      <img src="http://www.airasia.com/cdn/aa-images/en-MY/hongkong-headline-skyline_7.jpg?sfvrsn=2">
+      <img src="https://lh4.googleusercontent.com/nP70v24Uz0eMHa5X06vVu0V3Fowz2TbaXY--GwRmdvrnW5lunpmcoKdF4RzF3xLk0CxJfh1dAlZp1pY=w1366-h649-rw">
       
     </div>
