--- a/school/index.html
+++ b/school/index.html
@@ -11,8 +11,8 @@ title: School Life
 	</ul>
         
        <div class="photos">
-    <h3 class="blue">Blance</h3>
+    <h3 class="blue">Playground</h3>
     <div class="photos">
-      <img src="https://lh4.googleusercontent.com/nP70v24Uz0eMHa5X06vVu0V3Fowz2TbaXY--GwRmdvrnW5lunpmcoKdF4RzF3xLk0CxJfh1dAlZp1pY=w1366-h649-rw">
+      <img src="https://lh3.googleusercontent.com/JNBocYNVsMAXdqf8ytdwyzRiOWSERt4_imiF596_jwaCBxXJl2o93Z38xOovI4KyFTDMRYP2kRZmwhY=w1366-h606-rw">
       
     </div>
