--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 			</ul>
 		</footer>
 	
-  
+   <div class="photos">
+    <h3 class="blue">School</h3>
+    <div class="photos">
+      <img src="http://eaop.berkeley.edu/sites/default/files/portfolio/school_sanleandro_0.jpg">
+      
+    </div>
   <table>
     <thead>
       <tr>
