--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h3 class="blue">School</h3>
     <div class="photos">
       <img src="http://eaop.berkeley.edu/sites/default/files/portfolio/school_sanleandro_0.jpg">
-      
+      <img src="http://www.mumma.org/SLHS/SLHSPirate.jpg">      
     </div>
   <table>
     <thead>
