--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</footer>
 	
    <div class="photos">
-    <h3 class="blue">School</h3>
+    <h3 class="blue">This is my beautiful school and I really love it.</h3>
     <div class="photos">
 	    
  <img src="http://3.bp.blogspot.com/-ZrxfzJ8jETQ/T0aJoS_Ch5I/AAAAAAAAACw/B-7QPjnVGVg/s1600/exterior+1_web.jpeg"> 
