--- a/school/index.html
+++ b/school/index.html
@@ -11,8 +11,8 @@ title: School Life
 	</ul>
         
        <div class="photos">
-    <h3 class="blue">Playground</h3>
+    <h3 class="blue">Acts Center</h3>
     <div class="photos">
-      <img src="https://lh6.googleusercontent.com/54MuEiZK_eloyLmK6-TjFMulEkywlB2vSzQFbtMNmGUGXZPPZOdU0KefHgayga-1NRWYvIDrhR7gRWs=w1366-h606-rw">
+      <img src="http://www.sledshorties.com/uploads/6/2/0/4/62040913/8943155_orig.jpg">
       
     </div>
