--- a/Photo/index.html
+++ b/Photo/index.html
@@ -11,8 +11,7 @@ title: Scenic Photos
 	</ul>
         
        <div class="photos">
-    <h3 class="blue">Balance</h3>
+    <h3 class="blue">Hong Kong</h3>
     <div class="photos">
-      <img src="https://lh5.googleusercontent.com/agBgLEqSoUyI8zT_-FLer1U8W9l-sMvHJCXyQjnyvp6PESFY2z2b_M_HRxdIG1FFcKq-_RvfN5YFFXM=w1920-h861-rw">
-      
+      <img src="https://c4.staticflickr.com/2/1259/981444579_835e91b950.jpg
     </div>  
