--- a/more.html
+++ b/more.html
@@ -24,7 +24,7 @@
 	<section class="intro" id="zen-intro">
 		<header role="banner">
 			<h1></h1>
-			<h2>The Beauty of <abbr title="My Birthplace">CSS</abbr>HongKong</h2>
+			<h2>The Beauty of <abbr title="My Birthplace">My Birthplace</abbr>HongKong</h2>
 		</header>
 
 		<div class="summary" id="zen-summary" role="article">
@@ -32,10 +32,9 @@
 		</div>
 
 		<div class="preamble" id="zen-preamble" role="article">
-			<h3>The Road to Enlightenment</h3>
-			<p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible <abbr title="Document Object Model">DOM</abbr>s, broken <abbr title="Cascading Style Sheets">CSS</abbr> support, and abandoned browsers.</p>
-			<p>We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the <abbr title="World Wide Web Consortium">W3C</abbr>, <abbr title="Web Standards Project">WaSP</abbr>, and the major browser creators.</p>
-			<p>The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
+			<h3>Etymology</h3>
+			<p> "Hong Kong" is the pronunciation in spoken Cantonese.</p> 
+			<p>which means "Fragrant Harbour" or "Incense Harbour.</p>
 		</div>
 	</section>
 
@@ -95,31 +94,10 @@
 
 			<div class="zen-resources" id="zen-resources">
 				<h3 class="resources">Resources:</h3>
-				<ul>
-					<li class="view-css">
-						<a href="style.css" title="View the source CSS file of the currently-viewed design.">
-							View This Design&#8217;s <abbr title="Cascading Style Sheets">CSS</abbr>						</a>
-					</li>
-					<li class="css-resources">
-						<a href="http://www.mezzoblue.com/zengarden/resources/" title="Links to great sites with information on using CSS.">
-							<abbr title="Cascading Style Sheets">CSS</abbr> Resources						</a>
-					</li>
-					<li class="zen-faq">
-						<a href="http://www.mezzoblue.com/zengarden/faq/" title="A list of Frequently Asked Questions about the Zen Garden.">
-							<abbr title="Frequently Asked Questions">FAQ</abbr>						</a>
-					</li>
-					<li class="zen-submit">
-						<a href="http://www.mezzoblue.com/zengarden/submit/" title="Send in your own CSS file.">
-							Submit a Design						</a>
-					</li>
-					<li class="zen-translations">
-						<a href="http://www.mezzoblue.com/zengarden/translations/" title="View translated versions of this page.">
-							Translations						</a>
-					</li>
-				</ul>
+				
 			</div>
 		</div>
-	</aside>
+      </aside>
 
 
 </div>
