--- a/more.html
+++ b/more.html
@@ -24,7 +24,7 @@
 	<section class="intro" id="zen-intro">
 		<header role="banner">
 			<h1></h1>
-			<h2>The Beauty of <abbr title="My Birthplace">My Birthplace</abbr>HongKong</h2>
+			<h2>The Beauty of <abbr title="My Birthplace">HongKong</abbr></h2>
 		</header>
 
 		<div class="summary" id="zen-summary" role="article">
@@ -34,7 +34,8 @@
 		<div class="preamble" id="zen-preamble" role="article">
 			<h3>Etymology</h3>
 			<p> "Hong Kong" is the pronunciation in spoken Cantonese.</p> 
-			<p>which means "Fragrant Harbour" or "Incense Harbour.</p>
+			<p>Which means "Fragrant Harbour" or "Incense Harbour.</p>
+			<p>As of 1997, its official name is the "Hong Kong Special Administrative Region of the People's Republic of China". 
 		</div>
 	</section>
 
