--- a/more.html
+++ b/more.html
@@ -35,6 +35,10 @@
 			<p>As of 1997, its official name is the "Hong Kong Special Administrative Region of the People's Republic of China". 
 		</div>
 	</section>
+	
+	
+	<img src="http://studyabroad.ust.hk/files/boat-harbor-hong-kong-china-1_main.jpg"/>
+	
 
 	<div class="main supporting" id="zen-supporting" role="main">
 		<div class="explanation" id="zen-explanation" role="article">
