--- a/more.html
+++ b/more.html
@@ -37,7 +37,7 @@
 	</section>
 	
 	
-	<img src="http://studyabroad.ust.hk/files/boat-harbor-hong-kong-china-1_main.jpg"/>
+	<img src="http://www.airasia.com/cdn/aa-images/en-MY/hongkong-headline-skyline_7.jpg?sfvrsn=2"/>
 	
 
 	<div class="main supporting" id="zen-supporting" role="main">
