--- a/more.html
+++ b/more.html
@@ -22,7 +22,7 @@
 			<h2>The Beauty of <abbr title="My Birthplace">HongKong</abbr></h2>
 		</header>
 		
-		<img src="http://studyabroad.ust.hk/files/boat-harbor-hong-kong-china-1_main.jpg"/>
+		<img src="http://www.airasia.com/cdn/aa-images/en-MY/hongkong-headline-skyline_7.jpg?sfvrsn=2"/>
 
 		<div class="summary" id="zen-summary" role="article">
 
