--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
 	<title></title>
 
 	<link rel="stylesheet" media="screen" href="/css/more.css">
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml" target="_blank"
 
 
 	
