--- a/more.html
+++ b/more.html
@@ -36,21 +36,21 @@
 	</section>
 	
 	
-	<img src="http://www.airasia.com/cdn/aa-images/en-MY/hongkong-headline-skyline_7.jpg?sfvrsn=2"/>
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg/1600px-Kowloon_Panorama_by_Ryan_Cheng_2010.jpg2"/>
 	
 
 	<div class="main supporting" id="zen-supporting" role="main">
 		<div class="explanation" id="zen-explanation" role="article">
-			<h3>So What is This About?</h3>
-			<p>Hong Kong is frequently described as a place where "East meets West", reflecting the culture's mix of the territory's Chinese roots with influences from its time as a British colony.<abbr title="Cascading Style Sheets">CSS</abbr>.  The <abbr title="HyperText Markup Language">HTML</abbr> Hong Kong is a recognised global centre of trade and calls itself an "entertainment hub" <abbr title="Cascading Style Sheets">CSS</abbr></p>
+			<h3>Culture</h3>
+			<p>Hong Kong is frequently described as a place where "East meets West", reflecting the culture's mix of the territory's Chinese roots with influences from its time as a British colony.<abbr title="Cascading Style Sheets"></abbr>.  <abbr title="HyperText Markup Language"></abbr> Hong Kong is a recognised global centre of trade and calls itself an "entertainment hub" <abbr title="Cascading Style Sheets"></abbr></p>
 		
 		</div>
 
 		<div class="participation" id="zen-participation" role="article">
 			<h3>Participation</h3>
-			<p>Strong visual design has always been our focus. You are modifying this page, so strong <abbr title="Cascading Style Sheets">CSS</abbr> skills are necessary too, but the example files are commented well enough that even <abbr title="Cascading Style Sheets">CSS</abbr> novices can use them as starting points. Please see the <a href="http://www.mezzoblue.com/zengarden/resources/" title="A listing of CSS-related resources"><abbr title="Cascading Style Sheets">CSS</abbr> Resource Guide</a> for advanced tutorials and tips on working with <abbr title="Cascading Style Sheets">CSS</abbr>.</p>
+			<p>Strong visual design has always been our focus. You are modifying this page, so strong <abbr title="Cascading Style Sheets"></abbr> skills are necessary too, but the example files are commented well enough that even <abbr title="Cascading Style Sheets">CSS</abbr> novices can use them as starting points. Please see the <a href="http://www.mezzoblue.com/zengarden/resources/" title="A listing of CSS-related resources"><abbr title="Cascading Style Sheets">CSS</abbr> Resource Guide</a> for advanced tutorials and tips on working with <abbr title="Cascading Style Sheets">CSS</abbr>.</p>
 			<p>You may modify the style sheet in any way you wish, but not the <abbr title="HyperText Markup Language">HTML</abbr>. This may seem daunting at first if you&#8217;ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
-			<p>Download the sample <a href="/examples/index" title="This page's source HTML code, not to be modified.">HTML</a> and <a href="/examples/style.css" title="This page's sample CSS, the file you may modify.">CSS</a> to work on a copy locally. Once you have completed your masterpiece (and please, don&#8217;t submit half-finished work) upload your <abbr title="Cascading Style Sheets">CSS</abbr> file to a web server under your control. <a href="http://www.mezzoblue.com/zengarden/submit/" title="Use the contact form to send us your CSS file">Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
+			<p>Download the sample <a href="/examples/index" title="This page's source HTML code, not to be modified.">HTML</a> and <a href="/examples/style.css" title="This page's sample CSS, the file you may modify."></a> to work on a copy locally. Once you have completed your masterpiece (and please, don&#8217;t submit half-finished work) upload your <abbr title="Cascading Style Sheets">CSS</abbr> file to a web server under your control. <a href="http://www.mezzoblue.com/zengarden/submit/" title="Use the contact form to send us your CSS file">Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
 		</div>
 
 		<div class="benefits" id="zen-benefits" role="article">
