--- a/more.html
+++ b/more.html
@@ -21,6 +21,10 @@
 			<h2>The Beauty of <abbr title="My Birthplace">HongKong</abbr></h2>
 		</header>
 		
+		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Overlook_Hong_Kong_Island_north_coast%2C_Victoria_Harbour_and_Kowloon_from_middle_section_of_Lugard_Road_at_daytime_%28enlarged_version_and_better_contrast%2C_revised%29.jpg/1280px-thumbnail.jpg"target="_blank">
+		
+		
+		
 		<img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg"target="_blank">
 
 		<div class="summary" id="zen-summary" role="article">
