--- a/more.html
+++ b/more.html
@@ -31,10 +31,12 @@
 		<div class="preamble" id="zen-preamble" role="article">
 			<h3>Etymology</h3>
 			<p> "Hong Kong" is the pronunciation in spoken Cantonese.</p> 
-			<p>Which means "Fragrant Harbour" or "Incense Harbour.Hong Kong has carried many nicknames.
-				The most famous among those is the "Pearl of the Orient", which reflected the impressive night-view of the city's light decorations on the skyscrapers along both sides of the Victoria Harbour. 
-				The territory is also known as "Asia's World City".			
-			</p>
+			<p>Which means "Fragrant Harbour" or "Incense Harbour.</p>
+			<P>Hong Kong has carried many nicknames.<p/>
+				<p>The most famous among those is the "Pearl of the Orient",</p>
+				<p>which reflected the impressive night-view of the city's light decorations on the skyscrapers along both sides of the Victoria Harbour.</p> 
+				<p>The territory is also known as "Asia's World City".</p>			
+			
 			<p>As of 1997, its official name is the "Hong Kong Special Administrative Region of the People's Republic of China". 
 		</div>
 	</section>
