--- a/more.html
+++ b/more.html
@@ -19,8 +19,7 @@
 		<header role="banner">
 			<h1></h1>
 			<h2>The Beauty of <abbr title="My Birthplace">HongKong</abbr></h2>
-		</header>
-		
+		</header> <img src='http://assets.fodors.com/destinations/54468/boat-harbor-hong-kong-china-1_main.jpg">		
 		
 		<img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg"target="_blank">
 
