--- a/more.html
+++ b/more.html
@@ -48,9 +48,8 @@
 	
 
 	<div class="main supporting" id="zen-supporting" role="main">
-		<div class="explanation" id="zen-explanation" role="article">
-			<h3>Culture</h3>
-			<p>Hong Kong is frequently described as a place where "East meets West", reflecting the culture's mix of the territory's Chinese roots with influences from its time as a British colony.<abbr title="Cascading Style Sheets"></abbr>.  <abbr title="HyperText Markup Language"></abbr> Hong Kong is a recognised global centre of trade and calls itself an "entertainment hub" <abbr title="Cascading Style Sheets"></abbr></p>
+		<div class="explanation" id="zen-e                         xplanation" role="article">
+			<h3>Culture</h3>nbmuently described as a place where "East meets West", reflecting the culture's mix of the territory's Chinese roots with influences from its time as a British colony.<abbr title="Cascading Style Sheets"></abbr>.  <abbr title="HyperText Markup Language"></abbr> Hong Kong is a recognised global centre of trade and calls itself an "entertainment hub" <abbr title="Cascading Style Sheets"></abbr></p>
 		
 		</div>
 
@@ -61,8 +60,8 @@
 		</div>
 
 		<div class="benefits" id="zen-benefits" role="article">
-			<h3>Shopping/h3>
-			<p>Shopping is a widely popular social activity in Hong Kong,</p>
+			<h3>Shopping</h3>
+			<p>Shopping is a widely popular social activity in Hong Kong, where basic items for sale do not draw any duties, sales taxation, or import taxation.</p>
 		</div>
 
 		
