--- a/more.html
+++ b/more.html
@@ -56,7 +56,7 @@
 		<div class="participation" id="zen-participation" role="article">
 			<h3>Economy</h3>
 			<p>As one of the world's leading international financial centres, Hong Kong has a major capitalist service economy characterised by low taxation and free trade.</p>
-			<p>Hong Kong is the world's eleventh largest trading entity,[167] with the total value of imports and exports exceeding its gross domestic product. It is the world's largest re-export centre.</p>
+			<p>Hong Kong is the world's eleventh largest trading entity,with the total value of imports and exports exceeding its gross domestic product. It is the world's largest re-export centre.</p>
 		</div>
 
 		<div class="benefits" id="zen-benefits" role="article">
