--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     		<div class="blurb">
         		<h1>  <img src="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/>Hi , I'm Ellin!  <img src="http://www.yavf.or.th/bitrix/1%E0%B9%90/sakura_falling.gif" alt="sakura"/>
 			 </h1>
-				<p>I'm a student from <em>San Leandro High School  </em>  <a href="/more.html">What's more</a></p>
+				<p>I'm a student from <em>San Leandro High School  </em>  <a href="/more.html">My birthplace</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
