--- a/more.html
+++ b/more.html
@@ -21,7 +21,7 @@
 			<h2>The Beauty of <abbr title="My Birthplace">HongKong</abbr></h2>
 		</header> 		
 		
-	
+	        <img src="https://www.flaggenfritze.de/pics/hongkong-13148b.gif"target="_blank">
 			  
 		<img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg"target="_blank">
 
