--- a/more.html
+++ b/more.html
@@ -22,6 +22,9 @@
 		</header> 		
 		
 	        <img src="https://www.flaggenfritze.de/pics/hongkong-13148b.gif"target="_blank">
+		
+		<img src="https://www.crossed-flag-pins.com/animated-flag-gif/gifs/Hong-Kong_240-animated-flag-gifs.gif"target="_blank">
+		
 			  
 		<img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg"target="_blank">
 
