--- a/more.html
+++ b/more.html
@@ -49,7 +49,8 @@
 	
 	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg/1600px-Kowloon_Panorama_by_Ryan_Cheng_2010.jpg2"/>
 	
-
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Hong_Kong_Skyline_Panorama_-_Dec_2008.jpg/1920px-Hong_Kong_Skyline_Panorama_-_Dec_2008.jpg"/>
+	
 	<div class="main supporting" id="zen-supporting" role="main">
 		<div class="explanation" id="zen-e                         xplanation" role="article">
 			<h3>Culture</h3>nbmuently described as a place where "East meets West", reflecting the culture's mix of the territory's Chinese roots with influences from its time as a British colony.<abbr title="Cascading Style Sheets"></abbr>.  <abbr title="HyperText Markup Language"></abbr> Hong Kong is a recognised global centre of trade and calls itself an "entertainment hub" <abbr title="Cascading Style Sheets"></abbr></p>
