--- a/more.html
+++ b/more.html
@@ -27,6 +27,8 @@
 		
 			  
 		<img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg"target="_blank">
+		
+		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Hong_Kong_Skyline_Panorama_-_Dec_2008.jpg/1920px-Hong_Kong_Skyline_Panorama_-_Dec_2008.jpg"target="_blank">
 
 		<div class="summary" id="zen-summary" role="article">
 
@@ -47,9 +49,6 @@
 	</section>
 	
 	
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg/1600px-Kowloon_Panorama_by_Ryan_Cheng_2010.jpg2"/>
-	
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Hong_Kong_Skyline_Panorama_-_Dec_2008.jpg/1920px-Hong_Kong_Skyline_Panorama_-_Dec_2008.jpg"/>
 	
 	<div class="main supporting" id="zen-supporting" role="main">
 		<div class="explanation" id="zen-e                         xplanation" role="article">
