--- a/more.html
+++ b/more.html
@@ -63,6 +63,10 @@
 			<p>As one of the world's leading international financial centres, Hong Kong has a major capitalist service economy characterised by low taxation and free trade.</p>
 			<p>Hong Kong is the world's eleventh largest trading entity,with the total value of imports and exports exceeding its gross domestic product. It is the world's largest re-export centre.</p>
 		</div>
+		
+		
+		<img src=""target="_blank">
+		
 
 		<div class="benefits" id="zen-benefits" role="article">
 			<h3>Shopping</h3>
