--- a/more.html
+++ b/more.html
@@ -54,12 +54,11 @@
 	
 	<div class="main supporting" id="zen-supporting" role="main">
 		<div class="explanation" id="zen-explanation" role="article">
-			<h3>Culture</h3>nbmuently described as a place where "East meets West", reflecting the culture's mix of the territory's Chinese roots with influences from its time as a British colony.<abbr title="Cascading Style Sheets"></abbr>.  <abbr title="HyperText Markup Language"></abbr> Hong Kong is a recognised global centre of trade and calls itself an "entertainment hub" <abbr title="Cascading Style Sheets"></abbr></p>
+			<h3>Culture</h3>Hong Kong is frequently described as a place where "East meets West"", reflecting the culture's mix of the territory's Chinese roots with influences from its time as a British colony.
 		
 		</div>
 		
 		
-		<img src="http://208.v4.savills-vx.com/_images/retail-vs-shopping-mall(1).jpg"target="_blank">
 		
 
 		<div class="participation" id="zen-participation" role="article">
