--- a/more.html
+++ b/more.html
@@ -71,7 +71,9 @@
 		
 		<img src="http://208.v4.savills-vx.com/_images/retail-vs-shopping-mall(1).jpg"target="_blank">
 		
-
+<img src="http://static.asiawebdirect.com/m/phuket/portals/hong-kong-hotels-ws/homepage/shopping/sogo/pagePropertiesImage/sogo-hong-kong.jpg"target="_blank">
+		
+		
 		<div class="benefits" id="zen-benefits" role="article">
 			<h3>Shopping</h3>
 			<p>Shopping is a widely popular social activity in Hong Kong, where basic items for sale do not draw any duties, sales taxation, or import taxation.</p>
