--- a/more.html
+++ b/more.html
@@ -30,7 +30,7 @@
 		
 		<img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Kowloon_Panorama_by_Ryan_Cheng_2010.jpg"target="_blank">
 		
-		
+		<img src="http://ak6.picdn.net/shutterstock/videos/5636186/thumb/1.jpg"target="_blank">
 
 		<div class="summary" id="zen-summary" role="article">
 
