--- a/more.html
+++ b/more.html
@@ -85,7 +85,7 @@
 		
 		<img src="http://static.asiawebdirect.com/m/phuket/portals/hong-kong-hotels-ws/shared/teasersL/Top10/top10-shopping/teaserMultiLarge/image/10-shopping-hong-kong-L.jpg"target="_blank">
 
-		<img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Intersection_of_Yee_Wo_Street_and_Hennessy_Road_at_night,_Causeway_Bay._Hong_Kong,_China,_East_Asia.jpg"target="_blank">
+		<img src="https://static1.squarespace.com/static/55dc55d8e4b0a8533edc47fc/t/56f92bcce32140905d05cf31/1459170254128/Luxstate+-+Causeway+Bay+-+3+-+Causeway+Bay+Plaza+2_1b.jpg?format=1500w"target="_blank">
 
 		<footer>
 		
