--- a/more.html
+++ b/more.html
@@ -32,6 +32,8 @@
 		
 		<img src="http://ak6.picdn.net/shutterstock/videos/5636186/thumb/1.jpg"target="_blank">
 
+	        <img src="https://elblogdelcallado.files.wordpress.com/2014/02/hong-kong.jpg"target="_blank">
+		
 		<div class="summary" id="zen-summary" role="article">
 
 		</div>
